ecommerce/ecommerce-boundedContext/istio/networking/ecommerce-destination-rule-reactive.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ecommerce-reactive-destination
spec:
  host: ecommerce-reactive
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
