ecommerce/ecommerce-boundedContext/istio/networking/ecommerce-virtual-service--90-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-web-reactive-route
spec:
  hosts:
    - ecommerce-web-reactive
  http:
  - route:
    - destination:
        host: ecommerce-web-reactive
        subset: v1
      weight: 90
    - destination:
        host: ecommerce-web-reactive
        subset: v2
      weight: 10
