ecommerce/ecommerce-boundedContext/istio/networking/ecommerce-virtual-service-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-webapp-angular-route
spec:
  hosts:
  - ecommerce-webapp-angular
  http:
  - route:
    - destination:
        host: ecommerce-webapp-angular
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-web-reactive-route
spec:
  hosts:
  - ecommerce-web-reactive
  gateways:
  - ecommerce-web-reactive-gateway  
  http:
  - route:
    - destination:
        host: ecommerce-web-reactive
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-webapp-route
spec:
  hosts:
  - ecommerce-webapp
  http:
  - route:
    - destination:
        host: ecommerce-webapp
        subset: v1
---
